--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -157,3 +157,36 @@
     padding: 0;
   }
 }
+
+/* classes de validação - formulários */
+input:invalid {
+  border-bottom: 2px solid red;
+}
+
+textarea:required:invalid {
+  border-bottom: 2px dashed red;
+}
+
+/* erros - formulários */
+.popup__input-error {
+  display: none;
+  font-size: 12px;
+  color: red;
+}
+
+.popup__input-error_active {
+  display: block;
+}
+
+.popup__input_type_error {
+  border-bottom: 2px solid red;
+}
+
+/* submit button */
+.popup__button:disabled {
+  background: white;
+  border: 1px solid black;
+  color: black;
+  cursor: not-allowed;
+  opacity: 0.2;
+}
